@@ -257,6 +257,7 @@ gnulib_modules="
   unistd-safer
   unlink-busy
   unlinkat
+  unlinkdir
   unlocked-io
   unsetenv
   update-copyright
